# cmake-template

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  README_cn.md  revision.h
cmake-module/: CppcheckTargets.cmake  Findcppcheck.cmake  import_pkg_from_vcpkg.cmake  sanitizers.cmake  tools.cmake
cmake-module/import-project/: abseil.cmake  boost.cmake  cJSON.cmake  cares.cmake  grpc.cmake  gtest.cmake  host-abseil.cmake  host-cares.cmake  host-grpc.cmake  host-protobuf.cmake  host-re2.cmake  host-zlib.cmake  jsoncpp.cmake  libev.cmake  mosquitto.cmake  openssl.cmake  protobuf.cmake  re2.cmake  sqlcipher.cmake  test  zlib.cmake
cmake-module/toolchains/: toolchain_sample.cmake
samples/aixlog/: CMakeLists.txt  aixlog_example.cpp
samples/boost.asio/: CMakeLists.txt  tcp_async_multi_thread_server.cpp  tcp_async_server.cpp  tcp_sync_client.cpp  tcp_sync_multi_client.cpp  xxx_protocol.h
samples/boost.asio/drink_shop/: CMakeLists.txt  README.md  drink_shop_cli.cpp  drink_shop_config.cpp  drink_shop_config.hpp  drink_shop_handler.hpp  drink_shop_main.cpp  drink_shop_maker.hpp  drink_shop_packer.hpp  drink_shop_protocol.hpp  drink_shop_receptionist.cpp  drink_shop_receptionist.hpp  drink_shop_transaction.cpp  drink_shop_transaction.hpp  drink_stop_main.cpp  test_protocol.cpp
samples/boost.beast/: CMakeLists.txt  Downloader.hpp  flat_buffer.cpp  http_downloader.cpp  http_downloader.hpp  http_file_service.cpp  http_file_service.hpp  http_fs.cpp  http_fs.hpp  http_server_async.cpp  http_uploader.cpp  http_uploader.hpp  multi_buffer.cpp
samples/boost.json/: CMakeLists.txt  data.json  json.cpp  json2.cpp
samples/boost.thread/: CMakeLists.txt
samples/buf_wapper/: buf_wapper.hpp
samples/catch2/: CMakeLists.txt
samples/check_cpp/: CMakeLists.txt  check_cpp.cpp
samples/check_cpp_version/: CMakeLists.txt
samples/client/: CMakeLists.txt  argp.c  geet-cli11.cpp  getopt.c
samples/cmake/: CMakeLists.txt
samples/cmake-sample/: CMakeLists.txt  main.c
samples/cmake-sample/bar/: bar.c
samples/cmake-sample/foo/: foo.c
samples/cmake-sample/include/: bar.h  revision.h
samples/cmake/bar/: bar.c
samples/cmake/foo/: foo.c
samples/cmake/include/: foo.h
samples/coverage/: CMakeLists.txt
samples/cpp_features/: CMakeLists.txt  initializer_list.cpp  lvalue_rvalue  lvalue_rvalue.cpp  rvalue_and_forward.cpp  variadic_template.cpp
samples/cppcheck/: CMakeLists.txt  cppcheck_member_invalid.cpp  memleak.c  outofbound.c  resource_leak.c
samples/daemon/: CMakeLists.txt  daemon1.c  daemon2.cpp
samples/errmsg/: CMakeLists.txt  cli.c  errmsg.c  errmsg.h  xxapi.c  xxapi.h
samples/filesystem/: CMakeLists.txt  file_info.cpp  list_directory.cpp
samples/grpc-sample/: CMakeLists.txt
samples/jsoncpp/: CMakeLists.txt  jsoncpp_sample.cpp
samples/libev/: CMakeLists.txt  libev_echo_server.cpp  libev_timer.cpp  tcp_server_libev.c
samples/libev-sample/: README.md
samples/nanopb/: CMakeLists.txt  cmd.proto  dcmd.proto  decode_oneof.c  dynamic_pb_test.c  encode_oneof.c  static_pb_test.c
samples/network/: CMakeLists.txt  basic_tcp_client.c  basic_tcp_server.c  basic_udp_client.c  basic_udp_server.c  basic_unix_client.c  basic_unix_server.c  echo-client.cpp  echo-server.cpp  poll_tcp_server.c  select_tcp_server.c
samples/nlohmann-json/: CMakeLists.txt  nlohmann_json_sample.cpp
samples/nlohmann-json-sample/: CMakeLists.txt  nlohmann_json_sample.cpp
samples/pattern/iterator/: iterator1  iterator1.cpp  iterator2.cpp
samples/pattern/specification/: CMakeLists.txt  sample.cpp  specification.h
samples/sanitizer/: CMakeLists.txt
samples/xerror/: CMakeLists.txt  test_xerror.c
utils/c/: xerror.h
