# find_package(Boost REQUIRED asio)
find_path(AIXLOG_INCLUDE_DIRS "aixlog.hpp")
include_directories(aixlog_example PRIVATE ${AIXLOG_INCLUDE_DIRS})

add_executable(tcp_async_server tcp_async_server.cpp)
ADD_DEPENDENCIES(tcp_async_server autorevision)
target_link_libraries(tcp_async_server PRIVATE pthread)

add_executable(tcp_async_multi_thread_server tcp_async_multi_thread_server.cpp)
ADD_DEPENDENCIES(tcp_async_multi_thread_server autorevision)
target_link_libraries(tcp_async_multi_thread_server PRIVATE pthread)

add_executable(tcp_sync_client tcp_sync_client.cpp)
ADD_DEPENDENCIES(tcp_sync_client autorevision)
target_link_libraries(tcp_sync_client PRIVATE pthread)

add_executable(tcp_sync_multi_client tcp_sync_multi_client.cpp)
ADD_DEPENDENCIES(tcp_sync_multi_client autorevision)
target_link_libraries(tcp_sync_multi_client PRIVATE pthread)
