add_executable(libev_echo_server libev_echo_server.cpp)
target_link_libraries(libev_echo_server -lev)
add_executable(libev_official_example libev_official_example.c)
target_link_libraries(libev_official_example -lev)
add_executable(libev_timer libev_timer.cpp)
target_link_libraries(libev_timer -lev)
add_executable(libev_tcp_server libev_tcp_server.c)
target_link_libraries(libev_tcp_server -lev)